--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -1,8 +1,11 @@
 .header {
+	display: flex;
 	background-color: #FFFFFF;
 	height: 70px;
 	width: 100%;
 	border-bottom: 1px solid #CCCCCC;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .header .header_logo {
@@ -14,4 +17,14 @@
 	max-width: 142px;
 	width: 100%;
 	margin-left: 20px;
+}
+.header #api_status {
+	width: 40px;
+	height: 40px;
+	margin-right: 30px;
+	border-radius: 100%;
+	background-color: #cccccc;
+}
+.header #api_status.available {
+	background-color: #ff545f;
 }
