--- a/web_dynamic/templates/4-hbnb.html
+++ b/web_dynamic/templates/4-hbnb.html
@@ -12,7 +12,7 @@
 		<link rel="icon" type="image/icon" href="./images/icon.png?{{cache_id}}">
 		<!-- jQuery -->
 		<script defer src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-		<script defer src="./scripts/3-hbnb.js?{{ cache_id }}"></script>
+		<script defer src="./scripts/4-hbnb.js?{{ cache_id }}"></script>
 	</head>
 	<body class="body">
 		<header class ="header">
@@ -61,7 +61,7 @@
 					</div>
 				</div>
 
-				<button>Search</button>
+				<button id='filters-btn'>Search</button>
 			</section>
 
 			<section class="places">
