--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -79,6 +79,7 @@
 }
 
 .filters_item .popover h2 {
+	display: inline-block;
 	margin: 0;
 	font-size: 16px;
 }
@@ -105,6 +106,10 @@
 /* Show on hover */
 .filters .filters_item:hover > ul.popover {
 	display: block;
+}
+.filters .filters_item ul.popover ul {
+	padding: 0;
+	margin-left: 20px;
 }
 .filters .filters_item:hover > ul.popover .checkbox {
 	margin-right: 10px;
