--- a/web_dynamic/templates/100-hbnb.html
+++ b/web_dynamic/templates/100-hbnb.html
@@ -25,15 +25,31 @@
 				<div class="filters_main">
 					<div class="locations filters_item">
 						<h3>States</h3>
-						<h4>&nbsp;</h4>
+						<h4 id="states_cities_checked-filters">...</h4>
 						<!-- List of elements contained in the filter -->
 						<ul class="popover">
 							{% for state in data.states | sort(attribute="name") %}
-							<li>
-								<h2>{{ state.name }}</h2>
+							<li id="{{ state.id }}" name="{{ state.name }}">
+								<div>
+									<input
+										type="checkbox"
+										class="checkbox state-checkbox"
+										data-id="{{ state.id }}"
+										data-name="{{ state.name }}"
+									>
+									<h2>{{ state.name }}</h2>
+								</div>
 								<ul>
 									{% for city in state.cities | sort(attribute="name") %}
-									<li>{{ city.name }}</li>
+									<li id="{{ city.id }}" name="{{ city.name }}">
+										<input
+											type="checkbox"
+											class="checkbox city-checkbox"
+											data-id="{{ city.id }}"
+											data-name="{{ city.name }}"
+											>
+										{{ city.name }}
+									</li>
 									{% endfor %}
 								</ul>
 							</li>
